# sdvaluation

./: .gitignore  DUAL_EVALUATION_IMPLEMENTATION.md  ENHANCEMENTS.md  EVAL_COMMAND_ANALYSIS.md  EVAL_RESULTS_INTERPRETATION.md  HYPERPARAMETER_ANALYSIS.md  LEAF_ALIGNMENT_DEEP_DIVE.md.backup  LEAF_ALIGNMENT_DEEP_DIVE_DRAFT.md  LICENSE  PAPER_RESULTS_DRAFT.md  README.md  THRESHOLD_OPTIMIZATION.md  TUNER_CONSOLIDATION.md  TUNING_FIXES.md  VISUALIZATION_PLAN.md  compare_hyperparams.py  detect_hallucinations_leaf_alignment.py  generate_confusion_matrices.py  pyproject.toml
sdvaluation/: __init__.py  __main__.py  cli.py  core.py  dual_evaluation.py  encoding.py  leaf_alignment.py  tuner.py  tuning.py  valuator.py
