[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdvaluation"
version = "0.1.0"
description = "Data Shapley valuation for synthetic data"
authors = [
    {name = "Aleksandar Babic", email = "aleksandar.babic@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
    "rdt>=1.0.0",
    "pyyaml>=6.0",
    "opendataval>=2.0.0",
]

[project.scripts]
sdvaluation = "sdvaluation.__main__:app"

[project.urls]
Homepage = "https://github.com/kontramind/sdvaluation"
Repository = "https://github.com/kontramind/sdvaluation"
Issues = "https://github.com/kontramind/sdvaluation/issues"
